--- a/Business/style.css
+++ b/Business/style.css
@@ -112,3 +112,20 @@ footer{
     outline:none;
     border-bottom: 2px solid var(--black-blue);
 }
+
+.row{
+display: flex;
+flex-wrap: wrap;
+}
+
+.column{
+    flex: 20%;
+    padding: 20px;
+}
+
+footer ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
