--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header{
     min-height: 4rem;
     background-color: white;
     border-bottom: 3px solid var(--black-blue);
+    font-family: 'Rubik', sans-serif;
 }
 
 header ul {
@@ -142,6 +143,9 @@ footer ul{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+    font-size: 1.25rem;
 }
 
 .footer-logos{
