--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ footer{
     font-size: 1.5rem;
     color:var(--white-light-blue);
     min-height: 25rem;
-    background-color: var(--dark-blue);
+    background-color: var(--black-blue);
     border-bottom: 3px solid var(--black-blue);
     font-family: 'Roboto', sans-serif;
 }
@@ -145,7 +145,7 @@ footer{
 .row{
     display: flex;
     flex-wrap: wrap;
-    }
+}
 
 .column{
     flex: 20%;
