--- a/index.css
+++ b/index.css
@@ -83,9 +83,13 @@ footer{
 .vip{
     font-size: 2rem;
     min-height: 4rem;
-    background-color: white;
+    background-color: var(--dark-blue);
     border-bottom: 1px solid var(--black-blue);
     font-family: 'Roboto', sans-serif;
+    padding: 25px;
+    display: flex ;
+    align-items: center;
+    justify-content: center;
 }
 
 .recommended{
@@ -223,3 +227,23 @@ footer .diamond-logo img{
   .dropdown:hover .dropbtn {background-color: var(--blue);}
 
   /* https://www.w3schools.com/howto/howto_css_dropdown.asp */
+
+.premium{
+    font-size: 72px;
+    font-family: 'Bungee', sans-serif;
+    color:white
+}
+
+.diamond-logo-in-banner{
+    width:250px
+}
+
+.buy-now-button{
+    width: 250px;
+    height: 150px;
+    background-color: var(--blue);
+    border: none;
+    color:#17446E;
+    font-family: 'Rubik', sans-serif;
+    font-size: 50px;
+}
