--- a/index.css
+++ b/index.css
@@ -137,6 +137,21 @@ footer{
     width: 400px;
 }
 
+.title{
+    font-family: 'Rubik', sans-serif;
+    font-size: 50px;
+    width: 450px;
+    margin: 0 auto;
+    padding-top: 50px;
+}
+
+.subtitle{
+    font-family: 'Rubik', sans-serif;
+    font-size: 25px;
+    width: 280px;
+    margin: 0 auto;
+}
+
 .search-bar:focus{
     outline:none;
     border-bottom: 2px solid var(--black-blue);
@@ -427,23 +442,35 @@ footer .diamond-logo img{
 
 .box{
     background-color: var(--light-blue);
-    padding: 100px;
-    margin: 200px;
+    padding: 50px 100px 25px 100px;
+    margin: 50px 400px;
 }
 
-.button{
+.bigger{
+    margin: 10px 0;
+    font-size: 20px;
+}
+
+.buttons{
     height: 32px;
-    width: 64px;
+    width: 250px;
+    margin: 10px 100px;
     background-color: var(--blue);
     border: 1px solid var(--black-blue);
     border-radius: 3px;
 }
 
-.big-text{
+.big-text-right{
     font-family: 'Rubik', sans-serif;
     font-size: 800%;
     padding-left: 60%;
     padding-top: 250px;
+}
+
+.big-text{
+    font-family: 'Rubik', sans-serif;
+    font-size: 800%;
+    margin:0;
 }
 
 .bar{
@@ -453,7 +480,7 @@ footer .diamond-logo img{
 
 .button{
     height: 32px;
-    width: 64px;
+    width: 100px;
     background-color: var(--blue);
     border: 1px solid var(--black-blue);
     border-radius: 3px;
@@ -462,3 +489,23 @@ footer .diamond-logo img{
 .space{
     margin: 15px;
   }
+
+.edit{
+    width: 150px;
+    height: 75px;
+    border-radius: 25px;
+    font-size: 25px;
+    margin: 25px 150px;
+}
+
+.center{
+    margin: 660px;
+}
+
+.link{
+    text-decoration: none;
+}
+
+.diff-width{
+    width: 150px;
+}
